# voldrag

./: .gitignore  README.md  pyproject.toml
notebooks/: build_tutorial.py  test_hand.ipynb  test_min.ipynb  voldrag_tutorial.html  voldrag_tutorial.ipynb  voldrag_tutorial.md
scripts/: demo.py
src/voldrag/: __init__.py  analytics.py  cli.py  experiments.py  gbm.py  plots.py
