[project]
name = "voldrag"
version = "0.1.0"
description = "Exploration of volatility drag (mu - sigma^2/2) in stochastic processes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scipy>=1.17.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voldrag"]

[project.scripts]
voldrag-demo = "voldrag.cli:main"
